Fix env variable to be in cmd format

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,4 +8,4 @@ before_build:
 
 build_script:
   - cmd: nuget restore Sharpmake.sln
-  - cmd: \"$VS140COMNTOOLS\..\IDE\devenv.com" /Build "Release" Sharpmake.sln
+  - cmd: \"%VS140COMNTOOLS%\..\IDE\devenv.com" /Build "Release" Sharpmake.sln
