--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,6 @@ before_build:
   - cmd: git clean -ffxd
 
 build_script:
+  - cmd: nuget help
   - cmd: nuget restore Sharpmake.sln
   - cmd: echo "Building..." && "%VS140COMNTOOLS%\..\IDE\devenv.com" /Build "Release" Sharpmake.sln
