--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,8 @@ os: Visual Studio 2015
 platform:
   - Win32
 
+version: 1.0.{build}
+
 before_build:
   - cmd: git clean -ffxd
   - cmd: nuget restore Sharpmake.sln
