--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,25 +14,25 @@ build_script:
 
 test: off
 artifacts:
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.Application.exe
+  - path: Sharpmake.Application\bin\release\Sharpmake.Application.exe
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.Application.exe,config
+  - path: Sharpmake.Application\bin\release\Sharpmake.Application.exe,config
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.Application.pdb
+  - path: Sharpmake.Application\bin\release\Sharpmake.Application.pdb
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.CommonPlatforms.dll
+  - path: Sharpmake.Application\bin\release\Sharpmake.CommonPlatforms.dll
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.CommonPlatforms.pdb
+  - path: Sharpmake.Application\bin\release\Sharpmake.CommonPlatforms.pdb
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.dll
+  - path: Sharpmake.Application\bin\release\Sharpmake.dll
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.pdb
+  - path: Sharpmake.Application\bin\release\Sharpmake.pdb
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.Generators.dll
+  - path: Sharpmake.Application\bin\release\Sharpmake.Generators.dll
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\Sharpmake.Generators.pdb
+  - path: Sharpmake.Application\bin\release\Sharpmake.Generators.pdb
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\SimpleNuGet.dll
+  - path: Sharpmake.Application\bin\release\SimpleNuGet.dll
     name: Sharpmake
-  - path: Sharpmake\Sharpmake.Application\bin\release\SimpleNuGet.pdb
+  - path: Sharpmake.Application\bin\release\SimpleNuGet.pdb
     name: Sharpmake
