removing tests again

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,8 +9,9 @@ before_build:
 build_script:
   - cmd: echo "Building..." && "%VS140COMNTOOLS%\..\IDE\devenv.com" /Build "Release" Sharpmake.sln
 
-test_script:
-  - cmd: nunit3-console Sharpmake.UnitTests\bin\release\Sharpmake.UnitTests.dll --result=myresults.xml;format=AppVeyor
+#test_script:
+#  - cmd: nunit3-console Sharpmake.UnitTests\bin\release\Sharpmake.UnitTests.dll --result=myresults.xml;format=AppVeyor
+test: off
 
 artifacts:
   - path: Sharpmake.Application\bin\release\Sharpmake.Application.exe
