Convention is to have the first version released be 0.1 instead of 0.0; restrict appveyor to master and dev branches only

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -2,7 +2,7 @@
 
 image: Visual Studio 2015
 
-version: 0.0.{build}
+version: 0.1.{build}
 
 platform:
  - Any CPU
@@ -10,6 +10,11 @@ platform:
 configuration:
  - Debug
  - Release
+
+branches:
+  only:
+    - master
+    - dev
 
 assembly_info:
   patch: true
