Refactor Builder events to proper .NET events.
* Deprecates Builder's old events.
* Adds new events to replace the old ones, using the proper EventHandler<T> idiom.

--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -58,6 +58,7 @@
     <Compile Include="BuildContext\RedirectOutput.cs" />
     <Compile Include="BuildContext\RegressionTest.cs" />
     <Compile Include="Builder.cs" />
+    <Compile Include="BuilderEventArgs.cs" />
     <Compile Include="BuilderExtension.cs" />
     <Compile Include="CommandLine.cs" />
     <Compile Include="Configurable.cs" />
