Updates the samples/functional tests.
* Updates references to have <AllowIsolation> in some vcxproj. This is the default value so it should cause no change.
* Updates references to have C# project GUID in lowercase.
* Updates reference for sample SharpmakeGen since Sharpmake received new files.

--- a/samples/CPPCLI/reference/projects/clrcppproj.vs2010.win32.v3_5.vcxproj
+++ b/samples/CPPCLI/reference/projects/clrcppproj.vs2010.win32.v3_5.vcxproj
@@ -157,6 +157,7 @@
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\debug\clrcppproj.map</MapFileName>
       <BaseAddress></BaseAddress>
+      <AllowIsolation>true</AllowIsolation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -248,6 +249,7 @@
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\release\clrcppproj.map</MapFileName>
       <BaseAddress></BaseAddress>
+      <AllowIsolation>true</AllowIsolation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
