--- a/samples/HelloWorld/reference/projects/helloworld_vs2012_win32.vcxproj
+++ b/samples/HelloWorld/reference/projects/helloworld_vs2012_win32.vcxproj
@@ -132,6 +132,7 @@
       <LargeAddressAware>true</LargeAddressAware>
       <MapFileName>output\win32\debug\helloworld.map</MapFileName>
       <BaseAddress></BaseAddress>
+      <AllowIsolation>true</AllowIsolation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
