Android project generation for VS 2015 & 2017.
- API break: Changed selection criteria for Android makefile generators. They are now used with target fragments DevEnv.make in addition to Platform.android. Required since Platform.android can now be used with VS.
- Added AndroidPackageProject to create package for Android device.
- Requires VS cross-platform mobile development extensions.

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -74,6 +74,8 @@
     <Compile Include="IFileGenerator.cs" />
     <Compile Include="IGenerationContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VisualStudio\Androidproj.Template.cs" />
+    <Compile Include="VisualStudio\Androidproj.cs" />
     <Compile Include="VisualStudio\Csproj.Template.cs" />
     <Compile Include="VisualStudio\Csproj.cs" />
     <Compile Include="VisualStudio\IPlatformVcxproj.cs" />
