--- a/samples/SharpmakeGen/reference/sharpmake.platforms/sharpmake.commonplatforms/Sharpmake.CommonPlatforms.csproj
+++ b/samples/SharpmakeGen/reference/sharpmake.platforms/sharpmake.commonplatforms/Sharpmake.CommonPlatforms.csproj
@@ -44,6 +44,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Android\AndroidPlatform.Vcxproj.Template.cs" />
+    <Compile Include="Android\AndroidPlatform.cs" />
     <Compile Include="Apple\MacOsPlatform.cs" />
     <Compile Include="BaseMicrosoftPlatform.cs" />
     <Compile Include="BasePlatform.Vcxproj.Template.cs" />
