Added a special string comparer named FileSystemStringComparer that is either case-sensitive or case-insensitive, depending on the host operating system.

--- a/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
+++ b/samples/SharpmakeGen/reference/sharpmake/Sharpmake.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="FakeFileTree.cs" />
     <Compile Include="FastBuildSettings.cs" />
+    <Compile Include="FileSystemStringComparer.cs" />
     <Compile Include="GenerationOutput.cs" />
     <Compile Include="GeneratorManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
