--- a/Sharpmake/Sharpmake.csproj
+++ b/Sharpmake/Sharpmake.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -72,6 +72,7 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="FakeFileTree.cs" />
     <Compile Include="FastBuildSettings.cs" />
+    <Compile Include="FileSystemStringComparer.cs" />
     <Compile Include="GenerationOutput.cs" />
     <Compile Include="GeneratorManager.cs" />
     <Compile Include="GlobalSuppressions.cs" />
