- Register .sharpmake extension to visual assist for vs2017 - Convert .reg file to ASCII and make it recognized as text in gitattributes.
(cherry picked from commit 970afdfaf50cf8d7f8d4c5caa1872a5918873530 and commit 9f44703f992b47d32af3b273022596a405e2977d)

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 *.md text
 *.txt text
 *.yml text
+*.reg text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln text eol=crlf
