- Split AnalyseSourceFiles in two methods, one to parse includes from a line, one to parse references - Add (basic) unit-test for that feature - Add new utility method Util.FileExists that checks existence in fake tree (if active)

--- a/Sharpmake.UnitTests/Sharpmake.UnitTests.csproj
+++ b/Sharpmake.UnitTests/Sharpmake.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,6 +53,7 @@
     <Compile Include="DotNetReferenceCollectionTest.cs" />
     <Compile Include="KitsRootPathsTests.cs" />
     <Compile Include="ResolverTest.cs" />
+    <Compile Include="SharpmakeFileParserTest.cs" />
     <Compile Include="UtilTest.cs" />
   </ItemGroup>
   <ItemGroup>
