- SharpmakeGen now use reflection to discover all Platforms, Extensions and Samples projects. - SharpmakeGen now use wildards to find all extensions in Sharpmake.Extensions folder.

--- a/samples/SharpmakeGen/SharpmakeGen.csproj
+++ b/samples/SharpmakeGen/SharpmakeGen.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.sharpmake.cs" />
     <Compile Include="Platforms.sharpmake.cs" />
     <Compile Include="Samples.sharpmake.cs" />
     <Compile Include="SharpmakeGen.sharpmake.cs" />
