--- a/samples/SharpmakeGen/reference/samples/sharpmakegen/SharpmakeGen.csproj
+++ b/samples/SharpmakeGen/reference/samples/sharpmakegen/SharpmakeGen.csproj
@@ -44,6 +44,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.sharpmake.cs" />
     <Compile Include="Platforms.sharpmake.cs" />
     <Compile Include="Samples.sharpmake.cs" />
     <Compile Include="SharpmakeGen.sharpmake.cs" />
