--- a/samples/PackageReferences/reference/projects/packagereferences/PackageReferences.vs2017.v4_6_2.csproj
+++ b/samples/PackageReferences/reference/projects/packagereferences/PackageReferences.vs2017.v4_6_2.csproj
@@ -46,6 +46,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Mono.Cecil" Version="0.9.6.4">
+        <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="MySql.Data" Version="6.10.6">
+        <PrivateAssets>compile;build</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="NUnit" Version="3.6.0" />
   </ItemGroup>
