Add support of JSON Compilation Database
https://clang.llvm.org/docs/JSONCompilationDatabase.html

--- a/Sharpmake.Generators/Sharpmake.Generators.csproj
+++ b/Sharpmake.Generators/Sharpmake.Generators.csproj
@@ -72,6 +72,7 @@
     <Compile Include="FileGenerator.cs" />
     <Compile Include="FileGeneratorUtilities.cs" />
     <Compile Include="GeneratorManager.cs" />
+    <Compile Include="Generic\JsonCompilationDatabase.cs" />
     <Compile Include="Generic\MakeApplication.Template.cs" />
     <Compile Include="Generic\MakeApplication.cs" />
     <Compile Include="Generic\MakeProject.Template.cs" />
