- Add a bootstrap batch file to compile a minimal sharpmake and generate its solution - Remove Sharpmake.sln and most .csproj from the repository, now we'll use bootstrap-sharpmake.bat to generate them - Remove SharpmakeGen from samples, as it is now part of the pipeline - Move and split the files from SharpmakeGen into their respective sharpmake directories - Update the .gitignore to exclude csproj, sln and project.json by default

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 .p4ignore
 
+### Sharpmake specifics
+# by default, ignore all solution and projects
+*.sln
+*.csproj
+# but negate for the following, mandatorily versionned
+!Sharpmake/Sharpmake.csproj
+!Sharpmake.Application/Sharpmake.Application.csproj
+!Sharpmake.Generators/Sharpmake.Generators.csproj
+!Sharpmake.Platforms/Sharpmake.CommonPlatforms/Sharpmake.CommonPlatforms.csproj
+
 # Samples generated projects
 /samples/*/projects/*
 samples/winformssubtypesdb.bin
@@ -46,5 +56,6 @@ _ReSharper*/
 # Other
 *.orig
 .project
+project.json
 project.lock.json
 Sharpmake.VC.db
